--- a/SiteNest.html
+++ b/SiteNest.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"></script>
-  <title>SignIn Page</title>
+  <title>SiteNest | welcome page</title>
+  <link rel="icon" href="./Site Nest.svg" type="image/x-icon">
 </head>
 <body>
   <h1>SignIn Page</h1>
