add css to the login page and signup page

--- a/Create_Account.html
+++ b/Create_Account.html
@@ -20,7 +20,7 @@
 
       <button id="sign_up">Sign Up</button>
 
-      <p>or login with</p>
+      <p>or create with</p>
       
       <button type="button" id="sign_up-google">
         <span><img src="./google.svg" alt="google-icon"/></span> Google
