In progress with create_account page designsss like html

--- a/Create_Account.html
+++ b/Create_Account.html
@@ -17,7 +17,7 @@
         <div>
           <img src="./error.svg" alt="warning-icon" id="username-warning-icon"/>
         </div>
-        At most 6 characters and 1 special character
+        Username must be 3-15 characters and only contain letters and numbers.
       </span>
 
       <input type="email" id="user_email" placeholder="Email" required><br>
@@ -25,7 +25,7 @@
         <div>
           <img src="./error.svg" alt="warning-icon" id="email-warning-icon"/>
         </div>
-        At most 6 characters and 1 special character
+        Please enter a valid email address.
       </span>
 
       <input type="type" id="passcode" placeholder="Enter your password" required><br>
@@ -33,7 +33,7 @@
         <div>
           <img src="./error.svg" alt="warning-icon" id="password-warning-icon"/>
         </div>
-        At most 6 characters and 1 special character
+        Password must include at least 1 uppercase letter, 1 special character, and be at most 6 characters long.
       </span>
 
       <button id="sign_up">Sign Up</button>
