--- a/Login.html
+++ b/Login.html
@@ -13,7 +13,10 @@
     <form>
       <h1>Sign In</h1>
       <input type="text" id="name" placeholder="Username" /><br>
-      <input type="text" id="passcode" placeholder="password" /><br>
+      <input type="password" id="passcode" placeholder="Enter your password" required><br>
+      <span class="password-seer">
+        <img src="./show_password.svg" alt="password-padlock" class="password-padlock"/>
+      </span>
       <button id="sign_in" type="button">Sign In</button><br>
       <div class="logged">
         <div class="clicker">
