In progress with siteNest page designsss both the html, css, and js

--- a/SiteNest.html
+++ b/SiteNest.html
@@ -38,12 +38,9 @@
     <div class="header">
       <div style="display: flex; justify-content: center; align-items: center; gap: 5px;">
         <img src="./Site Nest.svg" alt="logo"/>
-        <a href="/" style="font-size: 1.5rem;">SiteNest</a>
+        <a href="/SiteNest.html" style="font-size: 1.5rem;" class="brand-name">SiteNest</a>
       </div>
-      <div class="btns">
-        <img src="./bars.svg" alt="open-btn" id="open-btn"/>
-        <img src="./close.svg" alt="close-btn" id="close-btn"/>
-      </div>
+      <button id="delete-account" type="button">Delete Account</button>
     </div>
     <div class="greetings-container">
       <p id="userlink"></p>
